Fix footer covering content on users page

--- a/pages/users/[id]/usersPage.module.css
+++ b/pages/users/[id]/usersPage.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100%;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -35,8 +35,8 @@
 
 .partLists {
   margin-left: 2rem;
-  height: 75vh;
-  width: 100vh;
+  height: 95%;
+  width: 100vw;
   background-color: var(--dark-2);
   border-radius: 1rem;
   margin-right: 2rem;
@@ -51,7 +51,7 @@
 
 .userSummary {
   margin-left: 2rem;
-  height: 75vh;
+  height: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
